--- a/oms-rest/pom.xml
+++ b/oms-rest/pom.xml
@@ -25,6 +25,10 @@
             <artifactId>oms-crud</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.arch.projects</groupId>
+            <artifactId>framework-core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
