--- a/oms-biz/src/main/resources/application.yml
+++ b/oms-biz/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
         server-addr: localhost:8848
 
   profiles:
-    include: db
+    include: db,redis
 #    include: db,redis,arch,rocketmq,feign
     active: ${profile:dev}
 
