--- a/oms-api/pom.xml
+++ b/oms-api/pom.xml
@@ -15,20 +15,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.arch.projects</groupId>
-            <artifactId>framework-api</artifactId>
+            <artifactId>framework-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.arch.projects</groupId>
             <artifactId>oms-common</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
     </dependencies>
 
