--- a/oms-biz/pom.xml
+++ b/oms-biz/pom.xml
@@ -29,6 +29,10 @@
             <groupId>org.arch.projects</groupId>
             <artifactId>oms-rest</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.arch.projects</groupId>
+            <artifactId>oms-api</artifactId>
+        </dependency>
         <!-- other -->
         <dependency>
             <groupId>org.yaml</groupId>
