--- a/oms-rest/pom.xml
+++ b/oms-rest/pom.xml
@@ -21,6 +21,10 @@
         </dependency>
         <dependency>
             <groupId>org.arch.projects</groupId>
+            <artifactId>oms-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.arch.projects</groupId>
             <artifactId>framework-core</artifactId>
         </dependency>
         <dependency>
