--- a/oms-api/pom.xml
+++ b/oms-api/pom.xml
@@ -20,6 +20,10 @@
         </dependency>
         <dependency>
             <groupId>org.arch.projects</groupId>
+            <artifactId>framework-beans</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.arch.projects</groupId>
             <artifactId>oms-common</artifactId>
         </dependency>
     </dependencies>
