--- a/oms-biz/pom.xml
+++ b/oms-biz/pom.xml
@@ -12,6 +12,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.arch.projects</groupId>
             <artifactId>oms-crud</artifactId>
             <exclusions>
@@ -35,6 +39,26 @@
         </dependency>
         <!-- other -->
         <dependency>
+            <groupId>org.arch.projects</groupId>
+            <artifactId>framework-id</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.arch.projects</groupId>
+            <artifactId>user-feign-admin</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.arch.projects</groupId>
+            <artifactId>user-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.arch.projects</groupId>
+            <artifactId>pms-feign</artifactId>
+        </dependency>
+        <dependency>
+            <artifactId>pms-api</artifactId>
+            <groupId>org.arch.projects</groupId>
+        </dependency>
+        <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
         </dependency>
@@ -50,11 +74,6 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
         </dependency>
-        <!-- 使用新的 framework 包 找不到 spring-security-config中的类，固单独引入  -->
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-config</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
@@ -66,6 +85,10 @@
         <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.beanmapper</groupId>
+            <artifactId>beanmapper</artifactId>
         </dependency>
     </dependencies>
 
